--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,7 +6,10 @@ on:
     paths: ["!frontend/**",".github/workflows/**"]
   pull_request:
     branches: ["main"]
+    types: [opened, reopened, synchronize]
     paths: ["!frontend/**",".github/workflows/**"]
+  
+    
 
 env:
   CARGO_TERM_COLOR: always
