--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -9,6 +9,7 @@ on:
     paths: ["frontend/**",".github/workflows/**"]
   pull_request:
     branches: [ "main" ]
+    types: [opened, reopened, synchronize]
     paths: ["frontend/**",".github/workflows/**"]
 
 jobs:
