Revert frontend and rust workflows

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -5,12 +5,10 @@ name: Frontend Node.js CI
 
 on:
   push:
-    branches: [ "main" ]
-    paths: ["frontend/**",".github/workflows/**"]
+    branches: ["main"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["main"]
     types: [opened, reopened, synchronize]
-    paths: ["frontend/**",".github/workflows/**"]
 
 jobs:
   frontend_build:
@@ -25,13 +23,13 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache-dependency-path: '**/package-lock.json'
-        cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache-dependency-path: "**/package-lock.json"
+          cache: "npm"
+      - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
