--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "glowing-telegram",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -35,7 +37,7 @@
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^7",
     "@typescript-eslint/parser": "^7",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "date-fns": "2.30.0",
     "eslint": "^8.43.0",
     "eslint-config-prettier": "^8.8.0",
@@ -45,7 +47,7 @@
     "prettier": "^2.8.8",
     "storybook": "^8.0.5",
     "typescript": "^5.1.6",
-    "vite": "^4.5.3",
-    "vitest": "^1.4.0"
+    "vite": "^5",
+    "vitest": "^1.6.0"
   }
 }
