--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,19 +32,19 @@
     "@storybook/react": "^8.0.5",
     "@storybook/react-vite": "^8.0.10",
     "@storybook/test": "^8.0.5",
-    "@types/node": "^18.19.31",
+    "@types/node": "^20",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.2.1",
     "date-fns": "2.30.0",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^8.10.0",
-    "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-storybook": "^0.8.0",
-    "prettier": "^2.8.8",
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-storybook": "latest",
+    "prettier": "latest",
     "storybook": "^8.0.10",
     "typescript": "^5.4.5",
     "vite": "^5.2.11",
