--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,8 @@
 {
   "name": "glowing-telegram",
+  "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -13,39 +15,39 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "ra-data-simple-rest": "^4.16.0",
-    "react": "^18.2.0",
-    "react-admin": "^4.16.12",
-    "react-dom": "^18.2.0"
+    "ra-data-simple-rest": "^4.16.17",
+    "react": "^18.3.1",
+    "react-admin": "^4.16.17",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.2.25",
-    "@mui/material": "5.15.14",
+    "@chromatic-com/storybook": "^1.3.3",
     "@mui/icons-material": "5.15.12",
+    "@mui/material": "5.15.14",
     "@mui/x-date-pickers": "7.1.0",
-    "@storybook/addon-essentials": "^8.0.5",
-    "@storybook/addon-interactions": "^8.0.5",
-    "@storybook/addon-links": "^8.0.5",
+    "@storybook/addon-essentials": "^8.0.10",
+    "@storybook/addon-interactions": "^8.0.10",
+    "@storybook/addon-links": "^8.0.10",
     "@storybook/blocks": "^8.0.5",
     "@storybook/react": "^8.0.5",
-    "@storybook/react-vite": "^8.0.5",
+    "@storybook/react-vite": "^8.0.10",
     "@storybook/test": "^8.0.5",
-    "@types/node": "^18.16.1",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "@typescript-eslint/eslint-plugin": "^7",
-    "@typescript-eslint/parser": "^7",
-    "@vitejs/plugin-react": "^4.0.1",
+    "@types/node": "^20",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "date-fns": "2.30.0",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-storybook": "^0.8.0",
-    "prettier": "^2.8.8",
-    "storybook": "^8.0.5",
-    "typescript": "^5.1.6",
-    "vite": "^4.5.3",
-    "vitest": "^1.4.0"
+    "eslint": "latest",
+    "eslint-config-prettier": "latest",
+    "eslint-plugin-react": "latest",
+    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-storybook": "latest",
+    "prettier": "latest",
+    "storybook": "^8.0.10",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   }
 }
