feat: Update Dockerfile.rust to use dynamic Debian version
This commit updates the Dockerfile.rust to use a dynamic Debian version by introducing the `DEBIAN_VERSION` argument. This allows for greater flexibility in choosing the Debian version for the runtime stage. By default, the latest Debian version is used. This change ensures that the Docker image is built with the most up-to-date Debian version, improving compatibility and security.

--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -3,6 +3,7 @@
 # Base stage
 ################################################################################
 ARG RUST_VERSION
+ARG DEBIAN_VERSION
 FROM rust:${RUST_VERSION:-latest} AS base
 
 ARG SERVICE_NAME
@@ -68,7 +69,7 @@ RUN cargo build --release
 ################################################################################
 # Final stage
 ################################################################################
-FROM debian:bookworm-slim AS runtime
+FROM debian:${DEBIAN_VERSION:-latest} AS runtime
 
 RUN apt-get update \
   && apt-get install -y --no-install-recommends \
