feat: Update iso8601 dependency to include chrono feature
This commit updates the `iso8601` dependency in the `Cargo.toml` file to include the `chrono` feature. This change ensures compatibility with the `chrono` library, allowing for the use of ISO 8601 formatted timestamps in the codebase.

--- a/stream_ingestion_api/Cargo.toml
+++ b/stream_ingestion_api/Cargo.toml
@@ -11,6 +11,6 @@ axum = "0.7.5"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
-iso8601 = { version = "0.6.1", features = ["serde"] }
+iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
