--- a/common_api_lib/Cargo.toml
+++ b/common_api_lib/Cargo.toml
@@ -30,7 +30,7 @@ diesel = { version = "2", features = [
 diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 bb8 = "0.8"
 chrono = "0.4.31"
-iso8601 = { version = "0.6.1", features = ["serde"] }
+iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
 reqwest = { version = "0.12.2", features = [
   "json",
   "rustls-tls",
