--- a/silence_detection_api/Cargo.toml
+++ b/silence_detection_api/Cargo.toml
@@ -11,7 +11,7 @@ axum = "0.7.5"
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
-iso8601 = { version = "0.6.1", features = ["serde"] }
+iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
 chrono = { version = "0.4.31", features = ["serde"] }
 tracing = { version = "0.1.40" }
 regex = "1.10.2"
