--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=ai_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     volumes:
       - ./openai_key.txt:/openai_key
@@ -80,6 +82,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=crud_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     depends_on:
       - db
@@ -98,6 +102,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=stream_ingestion_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
@@ -118,6 +124,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=silence_detection_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
@@ -139,6 +147,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=transcription_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       VIDEO_STORAGE_PATH: /obs
@@ -167,6 +177,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=task_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       <<: *backend-variables
@@ -184,6 +196,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=task_worker
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       <<: *backend-variables
@@ -199,6 +213,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=twitch_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     volumes:
       - ./twitch_key.txt:/twitch_client_secret
@@ -221,6 +237,8 @@ services:
       dockerfile: Dockerfile.rust
       args:
         - SERVICE_NAME=youtube_upload_api
+        - DEBIAN_VERSION=bookworm-slim
+        - RUST_VERSION=1.78
     restart: always
     environment:
       <<: *backend-variables
