--- a/ai_api/Cargo.toml
+++ b/ai_api/Cargo.toml
@@ -25,7 +25,7 @@ diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
 dotenvy = "0.15"
 bb8 = "0.8"
 chrono = "0.4.31"
-reqwest = { version = "0.11.22", features = [
+reqwest = { version = "0.12.4", features = [
   "json",
   "rustls-tls",
   "trust-dns",
@@ -33,3 +33,4 @@ reqwest = { version = "0.11.22", features = [
 ], default-features = false }
 tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+redact = { version = "0.1.9", features = ["serde"] }
