--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,9 @@ http {
 
         location ^~ /api/records/tasks {
             proxy_pass http://task_api:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             rewrite ^/api/records(.*)$ $1 break;
         }
 
