--- a/task_api/Cargo.toml
+++ b/task_api/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [dependencies]
 common_api_lib = { path = "../common_api_lib" }
 dotenvy = { version = "0.15.7" }
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["ws"] }
 tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
