--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -1,14 +1,14 @@
 {
     "extends": [
-        "eslint:recommended",
         "plugin:react/recommended",
         "plugin:react/jsx-runtime",
         "plugin:react-hooks/recommended",
         "prettier",
-        "plugin:storybook/recommended"
+        "plugin:storybook/recommended",
+        "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "no-unused-vars": [
+        "@typescript-eslint/no-unused-vars": [
             "error",
             {
                 "varsIgnorePattern": "^_",
