--- a/task_worker/Cargo.toml
+++ b/task_worker/Cargo.toml
@@ -12,4 +12,4 @@ redis = { version = "0.25.3", features = ["aio", "json", "tokio-comp"] }
 reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
-chrono = "0.4.37"
+chrono = { version = "0.4.37", features = ["serde"] }
