--- a/nginx.conf
+++ b/nginx.conf
@@ -44,12 +44,8 @@ http {
         # TODO enable this once we have a valid certificate
         #return 301 https://$host$request_uri;
 
-        location /api/chat {
-            proxy_pass http://ai_api:3000;
-        }
-
         location ^~ /api/records/tasks {
-            proxy_pass http://task_api:3000;
+            proxy_pass http://api:3000;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -57,40 +53,14 @@ http {
             rewrite ^/api/records(.*)$ $1 break;
         }
 
-
         location ^~ /api/records/twitchStreams {
-            proxy_pass http://twitch_api:3000;
-            rewrite ^/api/records/twitchStreams(.*)$ /videos$1 break;
+            proxy_pass http://api:3000;
+            rewrite ^/api/records/twitchStreams(.*)$ /twitch/videos$1 break;
         }
 
-        location /api/records {
-            proxy_pass http://crud_api:3000;
+        location /api {
+            proxy_pass http://api:3000;
             rewrite ^/api(.*)$ $1 break;
-        }
-
-        location /api/stream_ingestion {
-            proxy_pass http://stream_ingestion_api:3000;
-            rewrite ^/api/stream_ingestion(.*)$ $1 break;
-        }
-
-        location /api/silence_detection {
-            proxy_pass http://silence_detection_api:3000;
-            rewrite ^/api/silence_detection(.*)$ $1 break;
-        }
-
-        location /api/transcription {
-            proxy_pass http://transcription_api:3000;
-            rewrite ^/api/transcription(.*)$ $1 break;
-        }
-
-        location /api/twitch {
-            proxy_pass http://twitch_api:3000;
-            rewrite ^/api/twitch(.*)$ $1 break;
-        }
-
-        location /api/youtube {
-            proxy_pass http://youtube_api:3000;
-            rewrite ^/api/youtube(.*)$ $1 break;
         }
 
         # The frontend SPA application is served on the root path.
