--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "ra-data-simple-rest": "^4.16.17",
     "react": "^18.3.1",
     "react-admin": "^4",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
