--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -47,3 +47,5 @@ task_worker = { path = "../task_worker" }
 tempfile = "3.11.0"
 url = "2.5.2"
 validator = { version = "0.18", features = ["derive"] }
+figment = { version = "0.10.19", features = ["toml", "env"] }
+figment_file_provider_adapter = "0.1.1"
