--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
     "react": "^18.3.1",
     "react-admin": "^5",
     "react-dom": "^18.3.1",
-    "react-query": "^3.39.3"
+    "@tanstack/react-query": "^5"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
