Fix use of @tanstack/react-query

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -18,9 +18,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "types": [
+      "node",
+      "@testing-library/jest-dom"
+    ],
   },
   "include": [
     "src"
-  ]
+  ],
 }
