chore: Update ESLint configuration for frontend code

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "type-check": "tsc --noEmit",
-    "lint": "eslint --fix --ext .js,.jsx,.ts,.tsx ./src",
+    "lint": "eslint --fix ./src",
     "format": "prettier --write ./src",
     "test": "vitest run",
     "test:ui": "vitest --ui",
@@ -25,6 +25,9 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@eslint/compat": "^1.1.1",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.9.0",
     "@mui/icons-material": "5.16.6",
     "@mui/material": "5.16.6",
     "@mui/x-date-pickers": "7.12.0",
@@ -50,6 +53,7 @@
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-storybook": "latest",
+    "globals": "^15.9.0",
     "jsdom": "^24.1.1",
     "prettier": "latest",
     "storybook": "^8.0.10",
