chore: Update working directory for frontend build

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -14,7 +14,7 @@ jobs:
   frontend_build:
     defaults:
       run:
-        working-directory: frontend
+        working-directory: ./frontend
     runs-on: ubuntu-latest
 
     strategy:
