Ignore Dockerfiles and git files in .dockerignore

--- a/.dockerignore
+++ b/.dockerignore
@@ -24,3 +24,10 @@ chatbot
 
 # Ignore node_modules
 **/node_modules
+
+# Ignore Dockerfiles
+**/Dockerfile
+Dockerfile.*
+
+# Ignore git files
+**/.git
