--- a/video_ingestor/Cargo.toml
+++ b/video_ingestor/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "video_ingestor"
+description = "Video Ingestor for the Glowing Telegram project"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,6 +14,7 @@ figment = { version = "0.10.19", features = ["env"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.124"
 tracing = { version = "0.1.40" }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 
 [lints]
 workspace = true
