--- a/video_ingestor/Cargo.toml
+++ b/video_ingestor/Cargo.toml
@@ -15,6 +15,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.124"
 tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+tempfile = "3"
 
 [lints]
 workspace = true
