--- a/gt_ffmpeg/Cargo.toml
+++ b/gt_ffmpeg/Cargo.toml
@@ -9,6 +9,9 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.124"
 tracing = { version = "0.1.40" }
 tempfile = "3"
+chrono = { version = "0.4.38", features = ["serde"] }
+iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
+regex = "1.10.6"
 
 [lints]
 workspace = true
