--- a/video_ingestor/Cargo.toml
+++ b/video_ingestor/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "video_ingestor"
+license = "AGPL-3.0"
 description = "Video Ingestor for the Glowing Telegram project"
 version = "0.1.0"
 edition = "2021"
