Misc docker fixes

--- a/audio_transcriber/Dockerfile
+++ b/audio_transcriber/Dockerfile
@@ -55,6 +55,7 @@ RUN cargo build --release
 FROM debian:${DEBIAN_VERSION:-latest} AS runtime
 
 RUN apt-get update \
+  && apt-get -y upgrade \
   && apt-get install -y --no-install-recommends \
   ca-certificates \
   curl \
@@ -63,6 +64,7 @@ RUN apt-get update \
   pkg-config \
   python3 \
   python3-pip \
+  && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
 # Install openai whisper
