--- a/Dockerfile.rust
+++ b/Dockerfile.rust
@@ -73,6 +73,7 @@ RUN cargo build --release
 FROM debian:${DEBIAN_VERSION:-latest} AS runtime
 
 RUN apt-get update \
+  && apt-get -y upgrade \
   && apt-get install -y --no-install-recommends \
   ca-certificates \
   curl \
@@ -81,6 +82,7 @@ RUN apt-get update \
   ffmpeg \
   python3 \
   python3-pip \
+  && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
 
 # Install openai whisper
