--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
 name = "api"
+license = "AGPL-3.0"
+description = "API for the Glowing Telegram project"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+gt_ffmpeg = { path = "../gt_ffmpeg" }
 axum = { version = "0.7.5", features = ["ws"] }
 tokio = { version = "1.39", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
