--- a/video_ingestor/Dockerfile
+++ b/video_ingestor/Dockerfile
@@ -6,8 +6,6 @@ ARG RUST_VERSION
 ARG DEBIAN_VERSION
 FROM rust:${RUST_VERSION:-latest} AS base
 
-ARG SERVICE_NAME
-
 ################################################################################
 # Chef stage
 ################################################################################
@@ -26,11 +24,6 @@ WORKDIR /app
 
 COPY . .
 
-# delete top level Cargo.toml
-RUN rm -f Cargo.toml && rm -f Cargo.lock
-
-WORKDIR /app/${SERVICE_NAME}
-
 RUN cargo chef prepare --recipe-path recipe.json
 
 
@@ -39,13 +32,7 @@ RUN cargo chef prepare --recipe-path recipe.json
 ################################################################################
 FROM chef AS builder
 
-
-WORKDIR /app/${SERVICE_NAME}
-
-COPY --from=planner /app/${SERVICE_NAME}/recipe.json recipe.json
-
-COPY task_worker /app/task_worker
-COPY gt_ffmpeg /app/gt_ffmpeg
+COPY --from=planner /app/recipe.json recipe.json
 
 # Build dependencies. This is the caching Docker layer
 RUN cargo chef cook --release --recipe-path recipe.json
@@ -54,18 +41,13 @@ WORKDIR /app
 
 COPY . .
 
-# delete top level Cargo.toml
-RUN rm -f Cargo.toml && rm -f Cargo.lock
-
-WORKDIR /app/${SERVICE_NAME}
-
 # Run tests (If enabled)
 ARG RUN_TESTS=false
 RUN if [ "$RUN_TESTS" = "true" ]; then cargo test --release; fi
 
 # Build application
+WORKDIR /app/video_ingestor
 RUN cargo build --release
-
 
 ################################################################################
 # Final stage
@@ -80,18 +62,14 @@ RUN apt-get update \
   libssl-dev \
   pkg-config \
   ffmpeg \
-  python3 \
-  python3-pip \
   && apt-get clean \
   && rm -rf /var/lib/apt/lists/*
-
-# Install openai whisper
-RUN pip3 install --break-system-packages openai-whisper
 
 # Create a non-root user to run the app
 ARG USER=user
 ARG UID=10001
 
+WORKDIR /app
 
 RUN adduser \
   --disabled-password \
@@ -102,22 +80,9 @@ RUN adduser \
   --uid "${UID}" \
   "${USER}"
 
-RUN mkdir /model
-RUN chown ${USER}:${USER} /model
 
 USER ${USER}:${USER}
 
-ARG SERVICE_NAME
+COPY --from=builder --chown=${USER}:${USER} /app/target/release/video_ingestor /app/runtime
 
-# check that SERVICE_NAME is set
-RUN test -n "${SERVICE_NAME}"
-
-WORKDIR /app/${SERVICE_NAME}
-
-COPY --from=builder --chown=${USER}:${USER} /app/${SERVICE_NAME}/target/release/${SERVICE_NAME} /usr/local/bin/service_api
-
-ENV CARGO_MANIFEST_DIR=/app/${SERVICE_NAME}
-
-EXPOSE 3000
-
-ENTRYPOINT [ "service_api" ]
+ENTRYPOINT [ "/app/runtime" ]
