--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,11 @@
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.2",
     "@eslint/compat": "^1.2.2",
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.14.0",
-    "@mui/icons-material": "6.1.6",
-    "@mui/material": "6.1.6",
+    "@mui/icons-material": "^6",
+    "@mui/material": "^6",
     "@mui/x-date-pickers": "7.22.1",
     "@storybook/addon-essentials": "^8.4.1",
     "@storybook/addon-interactions": "^8.4.1",
