--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 [dependencies]
 aws-config = "1.5.5"
+aws-sdk-dynamodb = "1.53.0"
+aws-sdk-secretsmanager = "1.53.0"
 lambda_runtime = "0.13.0"
-serde_json = "1.0.127"
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
+figment = { version = "0.10.19", features = ["env"] }
 
 [lints]
 workspace = true
