--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -3,10 +3,15 @@ name = "summarize_transcription"
 version = "0.1.0"
 edition = "2021"
 
+[profile.release]
+strip = true
+
 [dependencies]
 aws-config = "1.5.5"
 aws-sdk-dynamodb = "1.53.0"
 aws-sdk-secretsmanager = "1.53.0"
+serde_dynamo = "4.2.14"
+openai_dive = "0.6.6"
 lambda_runtime = "0.13.0"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
