--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -1,19 +1,17 @@
 [package]
-name = "summarize_transcription"
+name = "crud_api"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 aws-config = "1.5.5"
-aws-sdk-dynamodb = "1.53.0"
-aws-sdk-secretsmanager = "1.53.0"
-serde_dynamo = "4.2.14"
-openai_dive = "0.6.6"
+aws-sdk-dynamodb = { version = "1.53.0" }
 lambda_runtime = "0.13.0"
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
+tracing = "0.1.40"
 
 [lints]
 workspace = true
