--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -11,7 +11,9 @@ serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
-tracing = "0.1.40"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
+aws_lambda_events = "0.15.1"
 
 [lints]
 workspace = true
