--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -14,6 +14,7 @@ figment = { version = "0.10.19", features = ["env"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 aws_lambda_events = "0.15.1"
+chrono = "0.4.39"
 
 [lints]
 workspace = true
