--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -15,6 +15,15 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 aws_lambda_events = "0.15.1"
 chrono = "0.4.39"
+axum-aws-lambda = "0.9.0"
+axum = "0.7"
+lambda_http = "0.13"
+tower-http = { version = "0.5.0", features = [
+  "cors",
+  "compression-gzip",
+  "compression-deflate",
+  "trace",
+] }
 
 [lints]
 workspace = true
