Add task to generate types from API schema using Quicktype

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,6 +20,16 @@
   ],
   "tasks": [
     {
+      "label": "generate types from api schema",
+      "type": "shell",
+      "options": {
+        "cwd": "${workspaceFolder}/docs/v2/schemas",
+      },
+      "command": "quicktype -s schema --lang rs --visibility public --derive-debug --derive-clone --derive-partial-eq --skip-serializing-none -o ${workspaceFolder}/types/src/lib.rs --src ./",
+      "group": "build",
+      "problemMatcher": []
+    },
+    {
       "label": "deploy lambda",
       "type": "shell",
       "options": {
