--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
 
 [lints]
 workspace = true
