Add summarize_transcription Lambda function Dockerfile for deployment

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,7 +10,8 @@
       "options": [
         "api",
         "crud_api",
-        "ai_chat_lambda"
+        "ai_chat_lambda",
+        "summarize_transcription",
       ]
     },
     {
