--- a/ai_chat_lambda/Cargo.toml
+++ b/ai_chat_lambda/Cargo.toml
@@ -14,6 +14,7 @@ tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
+types = { path = "../types" }
 
 [lints]
 workspace = true
