--- a/audio_transcriber/Cargo.toml
+++ b/audio_transcriber/Cargo.toml
@@ -15,6 +15,7 @@ serde_json = "1.0.124"
 tracing = { version = "0.1.40" }
 tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 tempfile = "3"
+types = { path = "../types" }
 
 [lints]
 workspace = true
