Add OpenAPI 3.1.1 specification and schemas for Glowing Telegram API (#292)
* Add OpenAPI 3.1.1 specification and schemas for Glowing Telegram API

Just getting started, much to do and validate

* Update OpenAPI specification and schemas to include new components and enhance existing definitions

* Add Twitch authentication and AI Chat endpoints and schemas

* Move JSON schemas to separate files

* Update schema type from array to object for /ai/chat

* Add task to generate types from API schema using Quicktype

* Rename JSON schemas to .schema files to make quicktype happy

* Add import script to generate Rust and TypeScript types from schemas

* Update TypeScript type generation to exclude date-time serialization

* Refactor OpenAPI schemas to use .schema files and update VideoClip schema properties

* Add types crate dependency and use it

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,6 +22,16 @@
   ],
   "tasks": [
     {
+      "label": "generate types from api schema",
+      "type": "shell",
+      "options": {
+        "cwd": "${workspaceFolder}"
+      },
+      "command": "./types/import.sh",
+      "group": "build",
+      "problemMatcher": []
+    },
+    {
       "label": "deploy lambda",
       "type": "shell",
       "options": {
