--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": { "enabled": false, "clientKind": "git", "useIgnoreFile": false },
   "files": {
-    "include": ["src/**/*.ts", "src/**/*.tsx", "gt-cdk/**/*.ts"],
+    "include": ["src/**/*.ts", "src/**/*.tsx", "cdk/**/*.ts"],
     "ignore": ["node_modules", "dist", "coverage", "build", "out"]
   },
   "formatter": {
