--- a/audio_transcriber/Cargo.toml
+++ b/audio_transcriber/Cargo.toml
@@ -3,6 +3,12 @@ name = "audio_transcriber"
 description = "Audio Transcriber for the Glowing Telegram project"
 version = "0.1.0"
 edition = "2021"
+authors = ["saebyn <saebynx@gmail.com>"]
+repository = "https://github.com/saebyn/glowing-telegram"
+license = "AGPL-3.0"
+readme = "../README.md"
+keywords = ["rust", "glowing-telegram", "audio", "transcriber"]
+categories = ["web-programming"]
 
 [dependencies]
 aws-sdk-dynamodb = "1.45.0"
