--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -2,6 +2,13 @@
 name = "crud_api"
 version = "0.1.0"
 edition = "2021"
+authors = ["saebyn <saebynx@gmail.com>"]
+repository = "https://github.com/saebyn/glowing-telegram"
+license = "AGPL-3.0"
+readme = "../README.md"
+description = "CRUD API for the Glowing Telegram project"
+keywords = ["rust", "glowing-telegram", "crud", "api"]
+categories = ["web-programming"]
 
 [dependencies]
 aws-config = "1.5.5"
