--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -2,6 +2,13 @@
 name = "summarize_transcription"
 version = "0.1.0"
 edition = "2021"
+description = "Summarize Transcription for the Glowing Telegram project"
+authors = ["saebyn <saebynx@gmail.com>"]
+repository = "https://github.com/saebyn/glowing-telegram"
+license = "AGPL-3.0"
+readme = "../README.md"
+keywords = ["rust", "glowing-telegram", "summarize", "transcription"]
+categories = ["web-programming"]
 
 [dependencies]
 aws-config = "1.5.5"
