--- a/twitch_lambda/Cargo.toml
+++ b/twitch_lambda/Cargo.toml
@@ -2,6 +2,13 @@
 name = "twitch_lambda"
 version = "0.1.0"
 edition = "2021"
+description = "Twitch Lambda for the Glowing Telegram project"
+authors = ["saebyn <saebynx@gmail.com>"]
+repository = "https://github.com/saebyn/glowing-telegram"
+license = "AGPL-3.0"
+readme = "../README.md"
+keywords = ["rust", "glowing-telegram", "twitch", "lambda"]
+categories = ["web-programming"]
 
 [dependencies]
 aws-config = "1.5.5"
