--- a/video_ingestor/Dockerfile
+++ b/video_ingestor/Dockerfile
@@ -12,7 +12,7 @@ FROM rust:${RUST_VERSION:-latest} AS base
 FROM base AS chef
 
 # Install cargo-chef. Used to cache dependencies
-RUN cargo install cargo-chef
+RUN cargo install --version 0.1.68 cargo-chef
 
 
 ################################################################################
