--- a/ai_chat_lambda/Cargo.toml
+++ b/ai_chat_lambda/Cargo.toml
@@ -11,17 +11,17 @@ keywords = ["rust", "aws", "lambda", "chat", "ai", "glowing-telegram"]
 categories = ["web-programming"]
 
 [dependencies]
-aws-config = "1.5.5"
+aws-config = { workspace = true }
 aws-sdk-secretsmanager = "1.53.0"
-openai_dive = "0.7.1"
-lambda_runtime = "0.13.0"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-tokio = { version = "1.40.0", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
-types = { path = "../types" }
+openai_dive = { workspace = true }
+lambda_runtime = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+types = { workspace = true }
 
 [lints]
 workspace = true
