--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -20,18 +20,14 @@ tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-aws_lambda_events = "0.15.1"
+aws_lambda_events = { workspace = true }
+axum-aws-lambda = { workspace = true }
+axum = { workspace = true }
+lambda_http = { workspace = true }
+tower-http = { workspace = true }
 chrono = "0.4.39"
-axum-aws-lambda = "0.9.0"
-axum = "0.7"
-lambda_http = "0.13"
-tower-http = { version = "0.5.0", features = [
-  "cors",
-  "compression-gzip",
-  "compression-deflate",
-  "trace",
-] }
 uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
+openai_dive = "0.7.1"
 
 [lints]
 workspace = true
