--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -15,8 +15,8 @@ aws-config = "1.5.5"
 aws-sdk-dynamodb = "1.53.0"
 aws-sdk-secretsmanager = "1.53.0"
 serde_dynamo = "4.2.14"
-openai_dive = "0.6.6"
-lambda_runtime = "0.13.0"
+openai_dive = { workspace = true }
+lambda_runtime = { workspace = true }
 serde = { version = "1.0.214", features = ["derive"] }
 serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
