--- a/types/Cargo.toml
+++ b/types/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "types"
 description = "Types for the Glowing Telegram project"
+keywords = ["rust", "glowing-telegram", "types", "jsonschema"]
+categories = ["web-programming"]
 version = "0.1.0"
 edition = "2021"
+authors.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
