--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ categories = ["web-programming"]
 [workspace.dependencies]
 types = { path = "./types" }
 aws-config = "1.5.5"
+aws-sdk-secretsmanager = { version = "1.53.0" }
+aws-sdk-s3 = { version = "1.49.0" }
+aws-sdk-dynamodb = { version = "1.53.0" }
 aws_lambda_events = "0.16"
 axum-aws-lambda = "0.9.0"
 lambda_runtime = "0.13"
@@ -41,11 +44,11 @@ serde_json = "1.0.132"
 tokio = { version = "1.40.0", features = ["full"] }
 figment = { version = "0.10.19", features = ["env"] }
 tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
 openai_dive = "0.7.1"
 reqwest = { version = "0.12.12" }
 redact = { version = "0.1.10", features = ["serde"] }
-chrono = "0.4.39"
+chrono = { version = "0.4.39", features = ["serde"] }
 uuid = { version = "1.11", features = ["v7", "fast-rng"] }
 
 [profile.release]
