--- a/audio_transcriber/Cargo.toml
+++ b/audio_transcriber/Cargo.toml
@@ -3,25 +3,25 @@ name = "audio_transcriber"
 description = "Audio Transcriber for the Glowing Telegram project"
 version = "0.1.0"
 edition = "2021"
-authors = ["saebyn <saebynx@gmail.com>"]
-repository = "https://github.com/saebyn/glowing-telegram"
-license = "AGPL-3.0"
-readme = "../README.md"
+authors.workspace = true
+repository.workspace = true
+license.workspace = true
+readme.workspace = true
 keywords = ["rust", "glowing-telegram", "audio", "transcriber"]
 categories = ["web-programming"]
 
 [dependencies]
-aws-sdk-dynamodb = "1.45.0"
-aws-sdk-s3 = "1.49.0"
-aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
-tokio = { version = "1", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.124"
-tracing = { version = "0.1.40" }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+aws-sdk-dynamodb = { workspace = true }
+aws-sdk-s3 = { workspace = true }
+aws-config = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 tempfile = "3"
-types = { path = "../types" }
+types = { workspace = true }
 
 [lints]
 workspace = true
