--- a/gt_ffmpeg/Cargo.toml
+++ b/gt_ffmpeg/Cargo.toml
@@ -11,11 +11,11 @@ keywords = ["rust", "ffmpeg", "glowing-telegram"]
 categories = ["web-programming"]
 
 [dependencies]
-tokio = { version = "1.39", features = ["full"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.124"
-tracing = { version = "0.1.40" }
+tokio = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
 tempfile = "3"
-chrono = { version = "0.4.38", features = ["serde"] }
+chrono = { workspace = true }
 iso8601 = { version = "0.6.1", features = ["serde", "chrono"] }
 regex = "1.10.6"
