--- a/video_ingestor/Cargo.toml
+++ b/video_ingestor/Cargo.toml
@@ -12,15 +12,15 @@ categories = ["web-programming"]
 
 [dependencies]
 gt_ffmpeg = { path = "../gt_ffmpeg" }
-aws-sdk-s3 = "1.49.0"
-aws-sdk-dynamodb = "1.45.0"
-aws-config = { version = "1.5.5", features = ["behavior-version-latest"] }
-tokio = { version = "1", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.124"
-tracing = { version = "0.1.40" }
-tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
+aws-sdk-s3 = { workspace = true }
+aws-sdk-dynamodb = { workspace = true }
+aws-config = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 tempfile = "3"
 
 [lints]
