--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,5 @@
 [workspace]
 resolver = "2"
-
 members = [
   "gt_ffmpeg",
   "video_ingestor",
@@ -11,6 +10,46 @@ members = [
   "types",
   "twitch_lambda",
 ]
+
+[workspace.package]
+authors = ["saebyn <saebynx@gmail.com>"]
+repository = "https://github.com/saebyn/glowing-telegram"
+license = "AGPL-3.0"
+readme = "./README.md"
+keywords = ["rust", "glowing-telegram", "twitch", "lambda"]
+categories = ["web-programming"]
+
+[workspace.dependencies]
+types = { path = "./types" }
+aws-config = "1.5.5"
+aws-sdk-secretsmanager = { version = "1.53.0" }
+aws-sdk-s3 = { version = "1.49.0" }
+aws-sdk-dynamodb = { version = "1.53.0" }
+aws_lambda_events = "0.16"
+axum-aws-lambda = "0.9.0"
+lambda_runtime = "0.13"
+axum = "0.7"
+lambda_http = { version = "0.13", features = [
+  "apigw_http",
+  "apigw_websockets",
+] }
+tower-http = { version = "0.6", features = [
+  "compression-gzip",
+  "compression-deflate",
+  "trace",
+  "cors",
+] }
+serde = { version = "1.0.214", features = ["derive"] }
+serde_json = "1.0.132"
+tokio = { version = "1.40.0", features = ["full"] }
+figment = { version = "0.10.19", features = ["env"] }
+tracing = "0.1.41"
+tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
+openai_dive = "0.7.1"
+reqwest = { version = "0.12.12" }
+redact = { version = "0.1.10", features = ["serde"] }
+chrono = { version = "0.4.39", features = ["serde"] }
+uuid = { version = "1.11", features = ["v7", "fast-rng"] }
 
 [profile.release]
 strip = true
