--- a/crud_api/Cargo.toml
+++ b/crud_api/Cargo.toml
@@ -11,27 +11,23 @@ keywords = ["rust", "glowing-telegram", "crud", "api"]
 categories = ["web-programming"]
 
 [dependencies]
-aws-config = "1.5.5"
-aws-sdk-dynamodb = { version = "1.53.0" }
-lambda_runtime = "0.13.0"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-tokio = { version = "1.40.0", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
-aws_lambda_events = "0.15.1"
-chrono = "0.4.39"
-axum-aws-lambda = "0.9.0"
-axum = "0.7"
-lambda_http = "0.13"
-tower-http = { version = "0.5.0", features = [
-  "cors",
-  "compression-gzip",
-  "compression-deflate",
-  "trace",
-] }
-uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
+aws-config = { workspace = true }
+aws-sdk-dynamodb = { workspace = true }
+lambda_runtime = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+aws_lambda_events = { workspace = true }
+axum-aws-lambda = { workspace = true }
+axum = { workspace = true }
+lambda_http = { workspace = true }
+tower-http = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
+openai_dive = { workspace = true }
 
 [lints]
 workspace = true
