--- a/summarize_transcription/Cargo.toml
+++ b/summarize_transcription/Cargo.toml
@@ -11,18 +11,18 @@ keywords = ["rust", "glowing-telegram", "summarize", "transcription"]
 categories = ["web-programming"]
 
 [dependencies]
-aws-config = "1.5.5"
-aws-sdk-dynamodb = "1.53.0"
-aws-sdk-secretsmanager = "1.53.0"
+aws-config = { workspace = true }
+aws-sdk-dynamodb = { workspace = true }
+aws-sdk-secretsmanager = { workspace = true }
 serde_dynamo = "4.2.14"
-openai_dive = "0.6.6"
-lambda_runtime = "0.13.0"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-tokio = { version = "1.40.0", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
+openai_dive = { workspace = true }
+lambda_runtime = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
 
 [lints]
 workspace = true
