--- a/twitch_lambda/Cargo.toml
+++ b/twitch_lambda/Cargo.toml
@@ -3,38 +3,34 @@ name = "twitch_lambda"
 version = "0.1.0"
 edition = "2021"
 description = "Twitch Lambda for the Glowing Telegram project"
-authors = ["saebyn <saebynx@gmail.com>"]
-repository = "https://github.com/saebyn/glowing-telegram"
-license = "AGPL-3.0"
-readme = "../README.md"
-keywords = ["rust", "glowing-telegram", "twitch", "lambda"]
+keywords = ["rust", "aws", "lambda", "twitch", "glowing-telegram"]
 categories = ["web-programming"]
+authors.workspace = true
+readme.workspace = true
+repository.workspace = true
+license.workspace = true
 
 [dependencies]
-aws-config = "1.5.5"
-aws-sdk-secretsmanager = { version = "1.53.0" }
-lambda_runtime = "0.13.0"
-serde = { version = "1.0.214", features = ["derive"] }
-serde_json = "1.0.132"
-tokio = { version = "1.40.0", features = ["full"] }
-figment = { version = "0.10.19", features = ["env"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.19"
-aws_lambda_events = "0.15.1"
-chrono = "0.4.39"
-axum-aws-lambda = "0.9.0"
-axum = "0.7"
-lambda_http = { version = "0.13", features = ["apigw_http"] }
-tower-http = { version = "0.5.0", features = [
-  "compression-gzip",
-  "compression-deflate",
-  "trace",
-] }
-uuid = { version = "1.11.0", features = ["v7", "fast-rng"] }
-types = { path = "../types" }
-reqwest = { version = "0.12.4" }
-redact = { version = "0.1.9", features = ["serde"] }
-oauth2 = { version = "4.0.0", features = ["reqwest", "rustls-tls"] }
+aws-config = { workspace = true }
+aws-sdk-secretsmanager = { workspace = true }
+lambda_runtime = { workspace = true }
+lambda_http = { workspace = true }
+tower-http = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tokio = { workspace = true }
+figment = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+axum = { workspace = true }
+axum-aws-lambda = { workspace = true }
+aws_lambda_events = { workspace = true }
+chrono = { workspace = true }
+uuid = { workspace = true }
+types = { workspace = true }
+reqwest = { workspace = true }
+redact = { workspace = true }
+oauth2 = { version = "4", features = ["reqwest", "rustls-tls"] }
 
 [lints]
 workspace = true
