--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -26,10 +26,12 @@ jobs:
           if [ -n "$GITHUB_REF" ]; then
             if [[ "$GITHUB_REF" == refs/tags/* ]]; then
               version=$(echo $GITHUB_REF | sed 's/refs\/tags\///')
+              jq ".version = \"$version\"" package.json > package.json.tmp
             else
               version=$(echo $GITHUB_SHA | cut -c1-7)
+              jq ".version |= . + \"-$version\"" package.json > package.json.tmp
             fi
-            jq ".version = \"$version\"" package.json > package.json.tmp
+
             mv package.json.tmp package.json
           fi
         working-directory: types
