Add permissions for id-token in publish_ts_types.yml

--- a/.github/workflows/publish_ts_types.yml
+++ b/.github/workflows/publish_ts_types.yml
@@ -6,6 +6,9 @@ on:
   push: 
     branches: ["main"]
 
+permissions:
+  id-token: write
+
 jobs:
   # This job publishes the TypeScript types to the GitHub Package Registry
   # it runs the "./types/import.sh" script which generates the types in types/
